# TTSWeb

./: .env.example  .gitignore  API_CONTRACT.md  ActivateEnv.sh  Dockerfile  README.md  deploy_frontend.sh  deploy_tts_web.sh  docker-compose.yml  package-lock.json  package.json  tunnel_TTSWeb.sh  vite.config.ts
backend/: README.md  pyproject.toml
backend/src/ttsweb/: __init__.py  main.py  schemas.py
backend/src/ttsweb/routers/: meta.py  tokenizer.py  tts.py  ws.py
backend/src/ttsweb/services/: job_manager.py  model_manager.py  tokenizer_service.py  tts_service.py
backend/tests/: conftest.py  test_api_jobs.py  test_api_tts.py  test_job_manager.py  test_schemas.py
frontend/: index.html  package-lock.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/features/: AudioRecorder.tsx  AudioVisualizer.tsx  Generator.tsx  ModeSelector.tsx  Tokenizer.tsx
frontend/src/components/ui/: Layout.tsx  ThemeSwitcher.tsx
frontend/src/lib/: api.ts  store.ts
frontend/src/styles/: themes.css
frontend/src/types/: schema.ts
src/: App.tsx
src/components/features/: AudioPlayer.tsx  AudioVisualizer.tsx  Generator.tsx
src/components/ui/: Layout.tsx
src/lib/: api.ts  store.ts
src/ttsweb/: config.py  middleware.py
src/ttsweb/routers/: health.py  jobs.py  meta.py  tts.py
src/ttsweb/services/: model_manager.py
tests/: test_api_meta.py  test_middleware.py
