[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ttsweb"
version = "0.1.0"
description = "Backend service for TTSWeb — Qwen3-TTS web interface"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-multipart>=0.0.18",
    "soundfile>=0.13.0",
    "numpy>=1.26",
    "aiofiles>=24.0",
    "websockets>=14.0",
]

[project.optional-dependencies]
gpu = [
    "qwen-tts",
    "torch",
    "flash-attn",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25",
    "httpx>=0.28",
    "ruff>=0.9",
    "mypy>=1.14",
]

[tool.hatch.build.targets.wheel]
packages = ["src/ttsweb"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "TCH"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
strict = false
warn_return_any = true
warn_unused_configs = true
